[gd_scene load_steps=12 format=2]

[ext_resource path="res://Gnop/Ball.tscn" type="PackedScene" id=1]
[ext_resource path="res://Gnop/assets/tennis-court.png" type="Texture" id=2]
[ext_resource path="res://Gnop/Bat.tscn" type="PackedScene" id=3]
[ext_resource path="res://Gnop/GnopMain.gd" type="Script" id=4]
[ext_resource path="res://Gnop/assets/Ove Melaa - Italo Unlimited.mp3" type="AudioStream" id=5]
[ext_resource path="res://Gnop/OutZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://Themes/Fonts/chevy-ray-pixel-font/ChevyRay - Bubble Time.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://GameOverHUD.tscn" type="PackedScene" id=8]

[sub_resource type="SegmentShape2D" id=2]
a = Vector2( -64, 0 )
b = Vector2( 1088, 0 )

[sub_resource type="DynamicFont" id=3]
size = 70
font_data = ExtResource( 7 )

[sub_resource type="GradientTexture2D" id=4]
width = 20
height = 45

[node name="GonpMain" type="Node2D"]
script = ExtResource( 4 )

[node name="Court" type="StaticBody2D" parent="." groups=["borders"]]
collision_mask = 3

[node name="Sprite" type="Sprite" parent="Court"]
position = Vector2( 512, 300 )
scale = Vector2( 8.192, 9.83607 )
texture = ExtResource( 2 )

[node name="TopBorder" type="CollisionShape2D" parent="Court"]
shape = SubResource( 2 )

[node name="BottomBorder" type="CollisionShape2D" parent="Court"]
position = Vector2( 0, 600 )
shape = SubResource( 2 )

[node name="BatLeft" parent="." instance=ExtResource( 3 )]
position = Vector2( 64, 296 )
id = "left"
speed = 5

[node name="BatRight" parent="." instance=ExtResource( 3 )]
position = Vector2( 968, 296 )
id = "right"

[node name="Ball" parent="." instance=ExtResource( 1 )]
position = Vector2( 512, 304 )
scale = Vector2( 2, 2 )

[node name="AudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="LeftOutZone" parent="." instance=ExtResource( 6 )]

[node name="RightOutZone" parent="." instance=ExtResource( 6 )]
position = Vector2( 1008, 0 )

[node name="PointLabel" type="Label" parent="."]
margin_left = 520.0
margin_top = 8.0
margin_right = 562.0
margin_bottom = 89.0
custom_colors/font_color = Color( 0.737255, 0.643137, 0.764706, 1 )
custom_fonts/font = SubResource( 3 )
text = "0"

[node name="GameOverHUD" parent="." instance=ExtResource( 8 )]
visible = false

[node name="SlowdownBar" type="TextureProgress" parent="."]
margin_left = 481.0
margin_top = 12.0
margin_right = 545.0
margin_bottom = 76.0
step = 0.01
value = 100.0
texture_progress = SubResource( 4 )
fill_mode = 3

[connection signal="body_entered" from="LeftOutZone" to="." method="_on_OutZone_body_entered"]
[connection signal="body_entered" from="RightOutZone" to="." method="_on_OutZone_body_entered"]
